[project]
name = "coldlead"
version = "0.1.0"
description = "HubSpot cold lead enrichment, scoring, personalization, routing (free-tier compatible)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "tldextract>=5.1",
  "pyyaml>=6.0",
  "wappalyzer>=1.0.10",
  "dnspython>=2.6",
]

[project.scripts]
coldlead = "coldlead.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

